feature:upload-images

--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ DB_HOST=localhost
 DB_USER=postgres
 DB_PASS=102030
 DB_NAME=example
+#CND cloudinary
+CLOUDINARY_CLOUD_NAME=andersonfrfilho
+CLOUDINARY_API_KEY=279884398794185
+CLOUDINARY_API_SECRET=A8GuU_eq-hTU3kmVMTwNZSgFbzk
