--- a/.env.test
+++ b/.env.test
@@ -9,3 +9,7 @@ DB_HOST=
 DB_USER=
 DB_PASS=
 DB_NAME=
+#CDN
+CLOUDINARY_CLOUD_NAME=andersonfrfilho
+CLOUDINARY_API_KEY=279884398794185
+CLOUDINARY_API_SECRET=A8GuU_eq-hTU3kmVMTwNZSgFbzk
