--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "queue":"nodemon src/queue;js",
+    "queue": "nodemon src/queue.js",
     "dev:debug": "nodemon --inspect src/server.js",
     "pretest": "set NODE_ENV=test&&sequelize db:migrate",
     "test": "set NODE_ENV=test&&jest",
     "postest": "set NODE_ENV=test&&sequelize db:migrate:undo:all"
   },
   "dependencies": {
+    "@sentry/node": "5.14.1",
     "bcryptjs": "^2.4.3",
     "bee-queue": "^1.2.3",
     "cloudinary": "^1.20.0",
@@ -19,14 +20,17 @@
     "date-fns": "^2.0.0-beta.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.5",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.5",
     "nodemailer-express-handlebars": "^3.1.0",
     "pg": "^7.18.2",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.5",
+    "youch": "^2.0.10",
     "yup": "^0.28.3"
   },
   "devDependencies": {
