--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 APP_URL=http://localhost:3333
 NODE_ENV=development
-
+FRONT_URL=false
+FRONT_URL_EXAMPLE=http://
 #auth
 APP_SECRET=templateandersonfrfilho
 #Database
