feature:update-reinforce

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ NODE_ENV=development
 FRONT_URL=false
 FRONT_URL_EXAMPLE=http://
 #auth
+APP_ADMIN=102030
 APP_SECRET=templateandersonfrfilho
 #Database
 DB_DIALECT=postgres
