--- a/.env.test
+++ b/.env.test
@@ -2,6 +2,7 @@ APP_URL=http://localhost:3333
 NODE_ENV=development
 
 #auth
+APP_ADMIN=102030
 APP_SECRET=templateandersonfrfilho
 DB_DIALECT=sqlite
 #Database
