--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "queue": "nodemon src/queue.js",
     "dev:debug": "nodemon --inspect src/server.js",
     "pretest": "set NODE_ENV=test&&sequelize db:migrate",
-    "test": "set NODE_ENV=test&&jest",
+    "test": "set NODE_ENV=test&&jest --runInBand",
     "postest": "set NODE_ENV=test&&sequelize db:migrate:undo:all"
   },
   "dependencies": {
@@ -38,6 +38,7 @@
     "rate-limit-redis": "^1.7.0",
     "redis": "^3.0.2",
     "sequelize": "^5.21.5",
+    "socket.io": "^2.3.0",
     "youch": "^2.0.10",
     "yup": "^0.28.3"
   },
