--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "queue": "nodemon src/queue.js",
     "dev:debug": "nodemon --inspect src/server.js",
     "pretest": "set NODE_ENV=test&&sequelize db:migrate",
-    "test": "set NODE_ENV=test&&jest --runInBand",
+    "test": "set NODE_ENV=test&&jest --runInBand --verbose --silent",
     "postest": "set NODE_ENV=test&&sequelize db:migrate:undo:all"
   },
   "dependencies": {
